# structecs

./: .markdownlint.yaml  Architecture.md  Cargo.toml  README.md
structecs/: Cargo.toml
structecs-macros/: Cargo.toml
structecs-macros/src/: extractable.rs  lib.rs
structecs/benches/: ecs_comparison.rs  query_benchmark.rs
structecs/examples/: additional.rs  batch_operations.rs  concurrent.rs  handler.rs  hierarchical.rs  mutability.rs  normal.rs  parallel.rs  parallel_benchmark.rs
structecs/src/: acquirable.rs  archetype.rs  entity.rs  error.rs  extractable.rs  extractor.rs  handler.rs  lib.rs  query.rs  world.rs
structecs/tests/: additional_memory_test.rs  additional_test.rs  alignment_test.rs  base_usage.rs  concurrent_test.rs  drop_order_test.rs  edge_cases_test.rs  extraction_safety_test.rs  integration_test.rs  memory_safety_test.rs  refcount_test.rs
