[workspace]
members = ["structecs", "structecs-macros"]
resolver = "3"

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "MIT"
authors = ["moriyoshi-kasuga"]
repository = "https://github.com/moriyoshi-kasuga/structecs"
homepage = "https://github.com/moriyoshi-kasuga/structecs"
documentation = "https://docs.rs/structecs"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
